--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,24 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* rounded cool looking scrollbar */
+@layer components {
+  ::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: hsl(var(--muted));
+    border-radius: 6px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: hsl(var(--background));
+  }
+}
+
+.bg-noise {
+  background-image: url("/noise.svg");
+}
